# STONKENGINE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  main.c  main.cpp  run.yml
.github/workflows/: run.yml
assets/materials/: sample_material_001.json
assets/scenes/: sample_scene_001.json
assets/shaders/: sample_frag.glsl  sample_vert.glsl  ui_frag.glsl  ui_vert.glsl
include/: array.h  config.h  defines.h  engine.h  json.h  log.h  types.h  utility.h
src/: config.c  config.cpp  engine.c  engine.cpp  json.c  log.c  log.cpp  utility.c  utility.cpp
